update work section content and scss

--- a/style/contact.scss
+++ b/style/contact.scss
@@ -152,6 +152,7 @@
                     padding-left: 14px;
                     padding-right: 0;
                     font-size: 1rem;
+                    font-family: inherit;
                   }
                 }
               }
