--- a/style/main.css
+++ b/style/main.css
@@ -919,21 +919,22 @@ html .totop {
   width: 100%;
   display: block;
 }
-.work-section .work-container .work-content .work-projects .glide .glide__track ul .glide__slide h3 {
+.work-section .work-container .work-content .work-projects .glide .glide__track ul .glide__slide a {
+  font-family: "Inter", sans-serif;
   font-size: 24px;
   color: #323258;
   font-weight: 700;
   margin: 0;
-  line-height: 1.2;
+  text-decoration: none;
+  line-height: 4.2;
 }
 .work-section .work-container .work-content .work-projects .glide .glide__track ul .glide__slide h6 {
+  font-family: "Inter", sans-serif;
   font-size: 15px;
   color: #687898;
-  margin-bottom: 10px;
   margin-top: 0;
   font-weight: 500;
   line-height: 1.2;
-  padding-top: 42px;
 }
 .work-section .work-container .work-content .work-projects .glide .glide__arrows {
   position: absolute;
@@ -995,18 +996,19 @@ html .totop {
     display: block;
     width: 100%;
   }
-  .work-section .work-container .work-content-mobile .work-projects .project-container .project-content .projects h3 {
-    font-size: 24px;
+  .work-section .work-container .work-content-mobile .work-projects .project-container .project-content .projects a {
+    font-size: 22px;
     color: #323258;
     font-weight: 700;
-    margin-bottom: 72px;
-    margin-top: 0;
+    text-decoration: none;
+    line-height: 4rem;
   }
   .work-section .work-container .work-content-mobile .work-projects .project-container .project-content .projects h6 {
-    font-size: 15px;
+    font-size: 13px;
     color: #687898;
-    margin-bottom: 0px;
-    margin-top: 18px;
+    margin-bottom: 59px;
+    margin-top: -11px;
+    font-weight: 500;
   }
 }
 .contact-section {
@@ -1168,6 +1170,7 @@ html .totop {
   padding-left: 14px;
   padding-right: 0;
   font-size: 1rem;
+  font-family: inherit;
 }
 .contact-section .contact-container .contact-box .contact-content .form-container form .row .send-btn {
   text-align: center !important;
