--- a/style/work.scss
+++ b/style/work.scss
@@ -46,21 +46,22 @@
                     display: block;
                   }
                 }
-                h3 {
+                a {
+                  font-family: "Inter", sans-serif;
                   font-size: 24px;
                   color: #323258;
                   font-weight: 700;
                   margin: 0;
-                  line-height: 1.2;
+                  text-decoration: none;
+                  line-height: 4.2;
                 }
                 h6 {
+                  font-family: "Inter", sans-serif;
                   font-size: 15px;
                   color: #687898;
-                  margin-bottom: 10px;
                   margin-top: 0;
                   font-weight: 500;
                   line-height: 1.2;
-                  padding-top: 42px;
                 }
               }
             }
@@ -130,18 +131,19 @@
                     width: 100%;
                   }
                 }
-                h3 {
-                  font-size: 24px;
+                a {
+                  font-size: 22px;
                   color: #323258;
                   font-weight: 700;
-                  margin-bottom: 72px;
-                  margin-top: 0;
+                  text-decoration: none;
+                  line-height: 4rem;
                 }
                 h6 {
-                  font-size: 15px;
+                  font-size: 13px;
                   color: #687898;
-                  margin-bottom: 0px;
-                  margin-top: 18px;
+                  margin-bottom: 59px;
+                  margin-top: -11px;
+                  font-weight: 500;
                 }
               }
             }
