--- a/style/about.scss
+++ b/style/about.scss
@@ -86,10 +86,11 @@
                 span {
                   font-weight: 400;
                 }
-                label {
+                a {
                   margin: 0;
                   font-weight: 600;
                   color: #323258;
+                  text-decoration: none;
                 }
               }
             }
