--- a/style/work.scss
+++ b/style/work.scss
@@ -136,7 +136,8 @@
                   color: #323258;
                   font-weight: 700;
                   text-decoration: none;
-                  line-height: 4rem;
+                  margin: 1rem 0;
+                  display: inline-block;
                 }
                 h6 {
                   font-size: 13px;
