--- a/style/contact.scss
+++ b/style/contact.scss
@@ -138,6 +138,9 @@
                     background-clip: padding-box;
                     transition: border-color 0.15s ease-in-out,
                       box-shadow 0.15s ease-in-out;
+                    &:hover &:focus-visible {
+                      border: none;
+                    }
                   }
                 }
                 .input-field {
